# advanced-python

./: .gitignore  main.py  pyproject.toml
PIL/: utils.py
audio/: 01-record.py
cv/: imgmatch.py  vmatch.py
hdf5/: show-outline.py
https/: README.md  a.py  client.py  server.py  server_http.py
json/: default.py
matplotlib/: xyz-integral.py
numpy/: dist.py
rerun/: main.py
shapely/: draw_figure_eight.py  generate_spiral_skeleton.py  inner.md  inner2.py  inner3.md  inner3.py
spider/: pet.py
torch/: ai.md  base.md  min-fashion-mnist.py  min_accelerate.py  min_acclerator.py  min_data_augmentation.py  min_vae.py  min_vit.py  show_checkpoints_meta.py
torch/diffusion/: min_flow.py
torch/drafts/: ddp_test.py
torch/min_vit/: min_vit_accelerate.py
torch/scripts/: show_checkpoints_meta_cfg.py
zarr/: show-zarr-info.py  show.py  viz-image-to-file.py  viz-image.py
