[project]
name = "advanced-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "numpy>=2.2.5",
    "opencv-python>=4.11.0.86",
    "pyaudio>=0.2.14",
    "rerun-sdk>=0.23.2",
    "uuid>=1.30",
    "websocket-client>=1.8.0",
    "websockets>=15.0.1",
]
